tests/ui/derive/fail_api_schema_no_arg_validate_rule_positional_arg.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
struct NoArgValidateRulePositionalArg {
    #[validate(required("email is required"))]
    email: String,
}

fn main() {}
